Display spinner icon & hide loklak logo while loading resources
Adjust spinner icon to match loklak logo, and change color to loklak default blue

--- a/app/styles/_loader.scss
+++ b/app/styles/_loader.scss
@@ -61,7 +61,7 @@
   position: fixed;
   z-index: 10002;
   top: 18px;
-  left: 50%;
+  left: 51%;
   margin-left: -7px;
 }
 
@@ -70,8 +70,8 @@
   height: 14px;
 
   border:  solid 2px transparent;
-  border-top-color:  #fff;
-  border-left-color: #fff;
+  border-top-color:  #55acee;
+  border-left-color: #55acee;
   border-radius: 10px;
 
   -webkit-animation: loading-bar-spinner 400ms linear infinite;
