--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -88,12 +88,12 @@
 	margin-top: 20px;
 	background: white;
 	border-radius: 10px; 
-	padding: 15px 10px;
+	padding: 15px 14px;
 	.trend-title {
 		margin: 0;
 		color: #66757f;
-		font-size: 18px;
-		font-weight: 300;
+		font-size: 25px;
+		font-weight: 500;
 	}
 	#home-trend-list {
 		margin-top: 5px;
@@ -102,6 +102,11 @@
 		li {
 			margin: 0;
 			padding: 0;
+			a {
+				font-size: 15px;
+				display: inline-block;
+				margin-bottom: 4px;
+			}
 		}
 	}
 }
