--- a/app/views/analyze/analyze.html
+++ b/app/views/analyze/analyze.html
@@ -25,12 +25,13 @@
 .scrollr
 {
     overflow-y: scroll; 
-    height : 278px ;
+    height : 350px ;
 
 }
 .no-top-margin
 {
     margin-top:0px; 
+    padding: 0px;
 }
 td
 {
@@ -109,25 +110,31 @@ td
     min-width: 1080px;
     margin: 0 auto;
 }
-
+.padded
+{
+    padding-left: 0px;
+}
+.bottom-margin-small{
+    margin-bottom: 10px;
+}
 </style>
 <div class="content-wrapper" >
     <div class="search-container container-fluid">
 
-        <div ng-show="!search.showMap" class="title-as-current-search-term">
+        <div ng-show="!search.showMap" class="title-as-current-search-term bottom-margin-small">
             <span>report:@{{username}}</span>
         </div>
         
-        
+    </div>    
         <!-- Main content -->
         <div class="container content-container">
             <!-- Left content: Who to follow, trends -->
-            <div class="col-md-3">
+            <div class="col-md-3 padded ">
                 <div class="home-user-info no-top-margin">
                 <div class="blue-background-placeholder">
                     <img ng-src="{{profilebanner}}" alt="user-banner-photo">    
                 </div>
-                <div class="home-user-info-content">
+                <div class="home-user-info-content" style="width:268px;">
                     <div class="top-content">
                         <img ng-src="{{profilepicurl | homePageImage }}">
                         <div class="name-and-screen-name">
@@ -155,10 +162,8 @@ td
     </button><img id="loader" src="../images/whiteloader.gif"></img>
     </center><br>
     
-    <div id="notfoundmessage">Sorry we did not find anyone with this account</div>
-
-            </div>   
-
+    <div id="notfoundmessage">Sorry we did not find anyone with this account</div>  
+        </div>
             <!-- Center result + option filters -->
             <div  class="result-container col-md-6">
                 <!-- Filters -->
@@ -226,7 +231,7 @@ td
             </div>
 
             <!-- Right content: Other statistics -->
-            <div class="dashboard dashboard-right col-md-3">
+            <div class="dashboard dashboard-right col-md-3 padded">
                 <div class="row whitebg" style="margin-left:5px">
                     <h3 class="analysis-titles">Follower's distribution</h3>
                     <canvas id="doughnut" class="chart chart-doughnut" legend="true" data="categoryvalues"labels="categorylabels">
@@ -236,7 +241,7 @@ td
                     <h3 class="analysis-titles">Most Influential Followers</h3>
                                         <div class="scrollr">
                                         <div ng-repeat="follower in followers_follower | limitTo:100">
-                                        <div class="home-user-info" style="width:100%;padding:20px; margin-bottom:5px;">
+                                        <div class="home-user-info" style="width:100%;padding-top:20px; margin-bottom:5px;">
                                         <div class="home-user-info-content">
                                             <div class="top-content">
                                                 <img src="{{follower.profileimg}}">
