--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -820,31 +820,54 @@
 	}
 
 /* Search view user trends */
-.search-view-user-trends {
-	padding-left: 0;
-	width: 100%;
-	.home-user-trends {
-		margin-top: 0;
-		background: none;
-		border: none;
-		border-radius: 0;
-		padding: 0px 15px 15px 0px;
-		.trend-title {
-			font-size: 25px;
-			font-weight: 500;
-		}
-		#home-trend-list {
-			li {
-				a {
-					font-size: 15px;
-					display: inline-block;
-					margin-bottom: 4px;
+	.search-view-user-trends {
+		padding-left: 0;
+		width: 100%;
+		.home-user-trends {
+			margin-top: 0;
+			background: none;
+			border: none;
+			border-radius: 0;
+			padding: 0px 15px 15px 0px;
+			.trend-title {
+				font-size: 25px;
+				font-weight: 500;
+			}
+			#home-trend-list {
+				li {
+					a {
+						font-size: 15px;
+						display: inline-block;
+						margin-bottom: 4px;
+					}
 				}
 			}
 		}
 	}
-}
 
+
+/* Style for account search, reused from home view */
+.account-item {
+	.home-user-info {
+		margin-top: 0;
+		margin-bottom: 20px;
+		padding-bottom: 20px;
+		height: 300px;
+		overflow: hidden;
+		.blue-background-placeholder {
+			height: 100px;
+		}
+		.bottom-content {
+			p {
+				padding: 20px;
+				color: #66757f;
+				font-size: 14px;
+				line-height: 1.375em;
+				height: 135px;
+			}
+		}
+	}
+}
 
 
 /* Style for advanced search */
