--- a/app/views/data-connect/add-connection-modal.html
+++ b/app/views/data-connect/add-connection-modal.html
@@ -29,7 +29,7 @@
 						</ul>
 					</div>
 
-					<div class="col-xs-10 tab-content">
+					<div class="col-xs-10 tab-content col-xs-offset-2">
 						<div class="tab-pane active" id="source-type-tab">
 							<div class="box-header">
 								<h3 class="box-title">Choose Data Source format</h3>
@@ -95,7 +95,7 @@
 						</div>
 						<div class="tab-pane" id="mapping-rule-tab">
 							<div class="box-header">
-								<h3 class="box-title">Final step : map your data to loklak</h3> <i id="toggle-show-data" ng-show="currentData" class="fa" ng-class="showCurrentData ? 'fa-caret-down' : 'fa-caret-right'" ng-click="showCurrentData = !showCurrentData"></i>
+								<h3 class="box-title">Final step: Map your data to loklak</h3> <i id="toggle-show-data" ng-show="currentData" class="fa" ng-class="showCurrentData ? 'fa-caret-down' : 'fa-caret-right'" ng-click="showCurrentData = !showCurrentData"></i>
 							</div>
 							<div class="box-body">
 								<div class="row" ng-show="showCurrentData">
