--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -29,13 +29,8 @@
         <div class="container content-container wall-body">
             <div ng-switch on="wall.wallOptions.layoutStyle" ng-show="wall.statuses.length>0" ng-class="wall.wallOptions.showStatistics?'col-md-8':'col-md-12'">
                 <div ng-switch-when="1" class="animate-repeat" ng-repeat="status in wall.statuses" linear open="wall.open" data="status"></div>
-                <!-- <div ng-switch-when="2" class="animate-repeat" ng-repeat="status in wall.statuses" card open="wall.open" data="status"></div> -->
-                <div ng-switch-when="2" masonry preserve-order>
-                    <!-- <div deckgrid class="deckgrid" source="wall.statuses" cardTemplate="wall/templates/card.html"></div> -->
-                    <div class="masonry-brick" ng-repeat="status in wall.statuses">
-                        <div card data="status"></div>
-                    </div>
-                </div>
+                <div ng-switch-when="2" class="animate-repeat" ng-repeat="status in wall.statuses" card open="wall.open" data="status"></div>
+               
                 <div ng-switch-when="3" class="animate-repeat" ng-repeat="status in wall.statuses" coa open="wall.open" data="status"></div>
                 <div ng-switch-when="4">
                     <div data="wall.statuses" id="map" maplayout style="margin-left:-48px; margin-top:-10px;" ng-style="wall.wallOptions.showStatistics?{}:{'margin-right':'-48px'}"></div>
