--- a/app/views/data-connect/add-connection-modal.html
+++ b/app/views/data-connect/add-connection-modal.html
@@ -101,33 +101,40 @@
 								<div class="row" ng-show="showCurrentData">
 								<pre>{{currentData | json }}</pre>
 								</div>
-								<div class="row field-label">
-									<div class="col-md-2"><h3>Loklak field</h3></div>
-									<div class="col-md-4 col-md-offset-1"><h3>Custom field</h3></div>
-								</div>
-								<hr/>
-								<div class="form-group" ng-repeat="(key, value) in loklakFields">
-									<div class="row" ng-class="$last ? 'last' : ''" >
-										<div class="col-md-2">
-											<span name="loklakField" class="loklak-field">{{value.label}}</span>
-										</div>
-										<div class="col-md-1" style="text-align: center">
-											<i class="fa fa-arrow-left"></i>
-										</div>
-										<div class="col-md-4">
-											<input type="text" class="form-control input-sm custom-field" ng-model="inputs.mapRules[key][0]"/>
-										</div>
-										<div class="col-md-4 field-preview">
-											<pre>{{accessDataField(key) | json }}</pre>
-										</div>
-
-										<div class="col-md-1" ng-show="$last">
-											<i id="remove-map-rule" class="fa fa-minus-square-o fa-lg" ng-show="mapRulesNum >= 1" ng-click="removeMapRule()"></i>
-										</div>
+								<div class="row" ng-show="currentLoklakFields == null && inputs.sourceType">
+									<div class="col-md-8">
+										<h4><small>This step is not required for data of type <code>{{sourceTypeList[inputs.sourceType]['name']}}.</code></small></h4>
 									</div>
-									<div class="row">
-										<div class="col-md-7">
-											<h4><small>{{value.help}}</small></h4>
+								</div>
+								<div ng-hide="currentLoklakFields == null">
+									<div class="row field-label">
+										<div class="col-md-2"><h3>Loklak field</h3></div>
+										<div class="col-md-4 col-md-offset-1"><h3>Custom field</h3></div>
+									</div>
+									<hr/>
+									<div class="form-group" ng-repeat="(key, value) in currentLoklakFields">
+										<div class="row" ng-class="$last ? 'last' : ''" >
+											<div class="col-md-2">
+												<span name="loklakField" class="loklak-field">{{value.label}}</span>
+											</div>
+											<div class="col-md-1" style="text-align: center">
+												<i class="fa fa-arrow-left"></i>
+											</div>
+											<div class="col-md-4">
+												<input type="text" class="form-control input-sm custom-field" ng-model="inputs.mapRules[key][0]"/>
+											</div>
+											<div class="col-md-4 field-preview">
+												<pre>{{accessDataField(key) | json }}</pre>
+											</div>
+
+											<div class="col-md-1" ng-show="$last">
+												<i id="remove-map-rule" class="fa fa-minus-square-o fa-lg" ng-show="mapRulesNum >= 1" ng-click="removeMapRule()"></i>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-md-7">
+												<h4><small>{{value.help}}</small></h4>
+											</div>
 										</div>
 									</div>
 								</div>
