#319 CSS fix for images

--- a/app/styles/_wall.scss
+++ b/app/styles/_wall.scss
@@ -582,8 +582,8 @@
                 }
             }
             .tweet-image {
-                max-width: 100%;
-                max-height: calc(33vh - 70px);
+                width: 100%;
+                height: calc(33vh - 70px);
                 padding-right: 10px;
             }
             .card-content-text {
