Add map view & message view modal

--- a/app/styles/_data-connect.scss
+++ b/app/styles/_data-connect.scss
@@ -134,6 +134,14 @@
 		width: 100%;
 	}
 }
+
+#message-view-modal .single-tweet {
+	position: relative;
+	transform: none;
+	top: 0;
+	left: 0;
+	width: 100%;
+}
 #add-connection-modal {
 	overflow-y: hidden;
 }
