--- a/app/views/data-connect/map-view-modal.html
+++ b/app/views/data-connect/map-view-modal.html
@@ -5,13 +5,11 @@
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
 				<h2 class="modal-title">Map View</h2>
 			</div>
-			<div class="modal-body">
-				<div id="single-data-map"></div>
+			<div class="modal-body" style="padding: 0">
+				<div id="single-data-map" style="height: 300px;"></div>
 			</div>
 			<div class="modal-footer">
-			<div style="float:left;" class="col-xs-offset-2">
-				<a id="close-map-view-button" data-dismiss="modal" type="button" class="btn btn-loklak-blue">Close</a>
-			</div>
+					<a id="close-map-view-button" data-dismiss="modal" type="button" class="btn btn-loklak-blue">Close</a>
 			</div>
 		</div>
 	</div>
